Add css style sheet

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 
 <head>
 	<title>Nate's Website</title>
+	
+	<!-- link to CSS sheets -->
+	<head>
+		<link rel="stylesheet" href="css/style.css">
+	</head>
 </head>
 
 <body>
+	<!-- Header -->
 	<h1> Hello world! welcome to my website! </h1>
 	<p> This is my website </p>
 </body>
