Add some images

--- a/index.html
+++ b/index.html
@@ -13,4 +13,10 @@
 	<!-- Header -->
 	<h1> Hello world! welcome to my website! </h1>
 	<p> This is my website </p>
+	
+	<!-- Load a photo -->
+	<img source="img/my_photo.heic"></img>
+	
+	<!-- Load another -->
+	<img source="img/uo_logo.webp"></img>
 </body>
