--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
 	<p> This is my website </p>
 	
 	<!-- Load a photo -->
-	<img source="img/my_photo.heic"></img>
+	<img source="img/my_photo.heic"
+		alt="profile" 
+		style="width:100%"
+		loading="lazy">
 	
 	<!-- Load another -->
-	<img source="img/uo_logo.webp"></img>
+	<img source="img/uo_logo.webp"
+		 alt="Mountains"
+		 style="width:100%"
+		 loading="lazy">
 </body>
