--- a/index.html
+++ b/index.html
@@ -18,12 +18,5 @@
 	<!-- Load a photo -->
 	<img source="img/my_photo.heic"
 		alt="profile" 
-		style="width:100%"
-		loading="lazy">
-	
-	<!-- Load another -->
-	<img source="img/uo_logo.webp"
-		 alt="Mountains"
-		 style="width:100%"
-		 loading="lazy">
+		style="width:100%">
 </body>
