--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<p> This is my website </p>
 	
 	<!-- Load a photo -->
-	<img source="img/my_photo.heic"
+	<img source="img/graduation.jpeg"
 		alt="profile" 
-		style="width:100%">
+		style="width:75%">
 </body>
