--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <!-- Special thanks to Alex Goke for presentation on how to setup -->
 
+<html>
 <head>
 	<title>Nate's Website</title>
 	
 	<!-- link to CSS sheets -->
-	<head>
-		<link rel="stylesheet" href="css/style.css">
-	</head>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 	<!-- Header -->
-	<h1> Hello world! welcome to my website! </h1>
-	<p> This is my website </p>
+	<h1>Hello world! Welcome to my website!</h1>
+	
+	<hr> # header separator
+	
+	<p>This is my website</p>
 	
 	<!-- Load a photo -->
-	<img source="img/graduation.jpeg"
+	<img src="img/graduation.jpeg" 
 		alt="profile" 
 		style="width:75%">
 </body>
+
+<!-- important, but dumb (IMO) -->
+</html>
